# BMECatExplorer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  justfile  main.py  notes.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20251212_0001_initial_schema.py
docs/: SCHEMA.md
frontend/: __init__.py  api_client.py  app.py  config.py
frontend/static/css/: custom.css
frontend/static/js/: main.js
frontend/templates/: base.html  error.html  index.html
frontend/templates/partials/: autocomplete.html  error.html  pagination.html  product_detail.html  product_row.html  search_results.html
src/: config.py
src/api/: app.py  schemas.py
src/api/routes/: hybrid.py  search.py
src/db/: import_jsonl.py  models.py
src/eclass/: names.py
src/embeddings/: __init__.py  client.py  text_prep.py
src/search/: client.py  constants.py  indexer.py  mapping.py
tests/: conftest.py
tests/integration/: test_database.py  test_opensearch.py
tests/smoke/: test_api.py  test_manual_searches.py
tests/unit/: test_import_jsonl.py  test_schemas.py  test_search_query.py
