[project]
name = "bmecatdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "lxml>=6.0.2",
    "openai>=2.9.0",
    "opensearch-py>=3.1.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require PostgreSQL/OpenSearch)",
    "smoke: Smoke tests (require running API server)",
]
